src/components/AppLayout/AppLayout.scss
@import '~@ergeon/core-components/src/components/variables.scss';

$layout-max-width: 1060px;
$sidebar-max-width: 260px;
$content-max-width: 700px;

.customer-app-layout {
  max-width: $layout-max-width;
  padding-left: $h-20;
  padding-right: $h-20;
  margin: $v-30 auto;

  .cards-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
  }

  @include phone() {
    padding-left: 0;
    padding-right: 0;
    margin: 0 auto;

    .card.soft-border {
      border-radius: 0;
      border-left: none;
      border-right: none;
      box-shadow: 0 24px 24px 0 rgba($gray-6, 0.8), 0 2px 0 0 rgba($gray-6, 0.5);
    }

    .customer-app-content.card.soft-border {
      border-top: none;
      border-bottom: none;
      background: none;
    }

    .cards-wrapper {
      align-items: center;
      flex-direction: column;
    }
  }

  .customer-app-breadcrumbs {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: $v-12;
  }

  .SideBar {
    &-Title {
      align-items: center;
      display: flex;
      margin-bottom: $v-12;

      svg {
        margin-right: $h-5;
      }

      p {
        color: $gray-1;
        font-size: $font-label-size;
        text-transform: uppercase;
      }
    }

    &-Header {
      padding: $v-12 $h-20;
      margin: 0;
      color: $black-3;
    }
  }

  .customer-app-sidebar {
    max-width: $sidebar-max-width;
    overflow: visible;
    padding-top: $v-30;
    width: 100%;

    .siblings-list {
      list-style: none;
      margin: 0;
      padding: 0;
      font-size: $font-mobile-size;
      color: $black-1;

      .siblings-list-item {
        display: flex;
        align-items: center;

        padding: 8px 20px;
        margin: 0;
        position: relative;
        color: $black-1;
        font-weight: normal;

        &:hover {
          background-color: $gray-6;
          cursor: pointer;
        }

        &.active {
          background-color: $gray-6;
          font-weight: 600;
        }

        &__wrapper {
          margin-right: 10px;
        }

        .menu-icon-wrapper {
          min-width: 25px;
          margin-right: 10px;
          text-align: center;

          svg path {
            fill: $gray-3;
          }
        }
      }

      .addresses-item {
        svg {
          width: $v-16 + 2;
          height: auto;
        }
      }
    }

    @include phone() {
      display: none;
    }

    .active-link {
      svg path {
        fill: $blue-1 !important;
      }
    }
  }

  .customer-app-wrapper {
    padding: 30px;
    width: 100%;

    @include phone() {
      max-width: 100%;
      padding: 0 20px;
    }
  }

  .customer-app-content {
    max-width: $content-max-width;
    padding: 30px;
    width: 100%;
    min-height: 200px;

    @include phone() {
      max-width: 100%;
      margin: 0;
      padding: 0 20px;
    }
  }

  .quote-layout {
    margin: 10px;
    padding: 10px;
  }

  .Icon-Profile {
    svg {
      height: $h-20;
      width: $h-20;
    }
    svg > g {
      fill: $gray-2;
    }
  }

  .Icon-Home {
    padding-right: $h-5;
    svg {
      height: $v-16;
      width: $v-16;
    }
    svg > g > g {
      fill: $gray-2;
    }
  }
}

